assets/css/style.css
*{
  margin:0;
  padding:0;
}

body{
  margin:0;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
  font-size:17px;
  line-height:1.6;
}
/*--Code from Brad Traversy https://codepen.io/bradtraversy/pen/XerXYV--*/
#showcase{
  background-image:url('/assets/images/bg_landing.jpg');
  background-size:cover;
  background-position:center;
  height:100vh;
  display:flex;
  flex-direction:column;
  justify-content:top;
  align-items:center;
  text-align:center;
  text-shadow: 4px 4px 3px black;
  padding-top: 5%;
  color:#fff;
}

#showcase h1{
  font-size:50px;
  line-height:1.5;

}

#showcase p{
  font-size:20px;
}

#showcase .button{
  font-size:18px;
  text-decoration:none;
  background-color: rgba(0,0,0, 0.7);
  color:#fff;
  border:#fff 1px solid;
  padding:10px 20px;
  border-radius:10px;
  margin-top:20px;
}

#showcase .button:hover{
  background:rgba(65, 65, 65, 0.7);
  color:#fff;
}

/*--Code from Brad Traversy https://codepen.io/bradtraversy/pen/XerXYV ending--*/

.nav-link:hover {
    background: red;
}

.section-pad {
    padding-top: 145px;
}

.card-body {
    min-height: 1px;
    padding: .25rem;
    text-align: center;
}

/*-- parallax section inspired by https://github.com/Eventyret/simple-parallax --*/

.title-div-body {
    height: 350px;
    width: 100vw;
}

.title-bg {
    background-color: rgba(0,0,0, 0.4);
    color: #fff;
    width: 100%;
    overflow: hidden;
}

.east-bg {
    background:url('/assets/images/budapest.jpg') no-repeat center center fixed;
}

.north-bg {
    background:url('/assets/images/stockholm.jpg') no-repeat center center fixed;
}
.south-bg {
    background:url('/assets/images/rome.jpg') no-repeat center center fixed;
}
.west-bg {
    background:url('/assets/images/london.jpg') no-repeat center center fixed;
}

